# Cyborg-1.5-Oled-Eye-RaspberryPi

./: .gitignore  .gitmodules  CMakeLists.txt  CyberEye.cpp  CyberEye.h  Main.cpp  README.md
Build-And-Debug-Scripts/: build.sh  build_and_debug.sh  build_and_run.sh  build_and_sync.sh  cmake_build.sh  setup.sh  sync_build.sh
Build-And-Debug-Scripts/utils/: install_dependencies_on_pi.sh  run_gdb_remote.sh  setup_cross_compile_environment.sh  sync_build.sh  sync_project.sh
Oled/: OLED_Driver.c  OLED_GUI.h  main.c
Setup-Scripts/: install_dependencies_on_pi.sh  setup_cross_compile_environment.sh
Utils/: LedBreather.cpp  LedBreather.h  LedStrip.cpp  LedStrip.h  MPU6050.cpp  MPU6050.h  PowerOffButton.cpp  PowerOffButton.h
